--- a/PizzaShop.Core/Views/Shared/_CategoryPartial.cshtml
+++ b/PizzaShop.Core/Views/Shared/_CategoryPartial.cshtml
@@ -1,5 +1,5 @@
 @model PizzaShop.Repository.ModelView.MenuWithItemsViewModel
-<Aside class=" rightsideborder sideBar border rounded p-3">
+<Aside class=" rightsideborder sideBar border-right-primary rounded p-3">
     <div class="logoheader">
         <h4 class="text-primary d-flex justify-content-between align-items-center">
             Category
@@ -24,7 +24,7 @@
                     <li class="nav-link links category-link d-flex justify-content-between align-items-center gap-2 @(ViewBag.SelectedCategoryId == category.Categoryid ? "active" : "")"
                         id="v-pills-@category.Categoryid-tab" data-category-id="@category.Categoryid">
 
-                        <a href="@Url.Action("Index", "Menu", new { categoryId = category.Categoryid })"
+                        <a
                             class="text-decoration-none @(ViewBag.SelectedCategoryId == category.Categoryid ? "text-white" : "text-dark")">
                             <i class="bi bi-grid-3x2-gap-fill me-2"></i>@category.Categoryname
                         </a>
@@ -140,7 +140,40 @@
 
                     <img src="~/images/search-icon.svg" width="20px" class="search_bar_img">
                 </div>
-                <button class="btn-light border p-2 mx-2"><i class="bi bi-trash"></i></button>
+                <button class="btn-light border p-2 mx-2" data-bs-toggle="modal" data-bs-target="#exampleModal3"
+                    id="deleteItems"><i class="bi bi-trash"></i></button>
+                @* multiple delete option *@
+
+                <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Items</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form method="post" asp-action="" asp-controller="">
+                                    <div
+                                        class="modal-body d-flex flex-column justify-content-center align-items-center ">
+                                        <img src="~/images/toppng.com-warning-icon-2400x2400.png" height="40px"
+                                            width="40px">
+                                        <div class=""> Are you sure you want to delete selected items?
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer d-flex-col justify-content-center">
+                                        <button type="submit" class="btn btn-primary">Yes</button>
+                                        <button type="button" class="btn border-primary text-primary"
+                                            data-bs-dismiss="modal">No</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
                 <a href="#" data-bs-toggle="modal" data-bs-target="#addItem"
                     class=" btn btn-primary text-decoration-none  d-flex justify-content-center align-items-center p-2 rounded text-white">+<span
                         class="spanClass text-white" id="buttonContent">New Items</span></a>
@@ -148,15 +181,42 @@
             @* -------------------------------------partial view for items----------------------------------------- *@
             <div id="collapse1" class="tabularData ">
                 @Html.Partial("_ItemsPartial", Model)
+
             </div>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-end align-items-center d-lg-flex d-sm-flex gap-2">
+                    <div class="d-flex align-items-center mb-2 mt-2">
+                        <span>Items per page: &nbsp</span>
+                        <div class="dropdown">
+                            <button class="btn border dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                                aria-expanded="false" id="itemsPerPageBtn">
+                                5
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item page-size-option" href="#" data-size="5">5</a></li>
+                                <li><a class="dropdown-item page-size-option" href="#" data-size="10">10</a></li>
+                                <li><a class="dropdown-item page-size-option" href="#" data-size="15">15</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center mb-2 mt-2">
+                        <span id="pagination-info">Showing 1-5 of 5</span>
+                        <li class="page-item">
+                            <a class="page-link prev-page mx-2" href="#" id="prevPage">&lt;</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link next-page" href="#" id="nextPage">></a>
+                        </li>
+                    </div>
+                </ul>
+            </nav>
+
             @* ---------------------------------------------------------------------------------------------------- *@
 
         </div>
 
     </div>
-    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-salads-tab" tabindex="0">
-        kalp pandya
-    </div>
+
 </div>
 
 
@@ -173,19 +233,22 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function () {
-        // Handle search input
-        $('#searchInput').on('keyup', function () {
-            fetchItems($('.category-link.active').data('category-id'), $(this).val());
-        });
+        var rowsPerPage = 5; // Default items per page
+        var currentPage = 1;
+        var totalItems = 0;
 
-        // Fetch items via AJAX
-        function fetchItems(categoryId = null, searchTerm = '') {
+        function fetchItems(categoryId = null, searchTerm = '', page = 1, pageSize = 5) {
             $.ajax({
                 url: '@Url.Action("FilterItems", "Menu")',
                 type: 'GET',
-                data: { categoryId: categoryId, searchTerm: searchTerm },
+                data: { categoryId: categoryId, searchTerm: searchTerm, pageNumber: page, pageSize: pageSize },
                 success: function (data) {
                     $('#collapse1').html(data);
+
+                    // Get total items from the data attribute
+                    totalItems = parseInt($('#itemsContainer').attr('data-total-items')) || 0;
+
+                    updatePagination();
                 },
                 error: function () {
                     alert('Error loading items.');
@@ -193,15 +256,42 @@
             });
         }
 
+        function updatePagination() {
+            var totalPages = Math.ceil(totalItems / rowsPerPage);
+            var startItem = (currentPage - 1) * rowsPerPage + 1;
+            var endItem = Math.min(currentPage * rowsPerPage, totalItems);
 
-        $('.category-link').click(function (e) {
+            $("#pagination-info").text(`Showing ${startItem}-${endItem} of ${totalItems}`);
+            $("#prevPage").toggleClass("disabled", currentPage === 1);
+            $("#nextPage").toggleClass("disabled", currentPage >= totalPages);
+        }
+
+        $(document).on('click', '#prevPage', function (e) {
             e.preventDefault();
-            var categoryId = $(this).data('category-id');
-
-            $('.category-link').removeClass('active');
-            $(this).addClass('active');
-
-            fetchItems(categoryId, $('#searchInput').val());
+            if (currentPage > 1) {
+                currentPage--;
+                fetchItems($('.category-link.active').data('category-id'), $('#searchInput').val(), currentPage, rowsPerPage);
+            }
         });
+
+        $(document).on('click', '#nextPage', function (e) {
+            e.preventDefault();
+            if (currentPage * rowsPerPage < totalItems) {
+                currentPage++;
+                fetchItems($('.category-link.active').data('category-id'), $('#searchInput').val(), currentPage, rowsPerPage);
+            }
+        });
+
+        $(document).on('click', '.page-size-option', function (e) {
+            e.preventDefault();
+            rowsPerPage = parseInt($(this).data("size"));
+            $("#itemsPerPageBtn").text(rowsPerPage);
+            currentPage = 1;
+            fetchItems($('.category-link.active').data('category-id'), $('#searchInput').val(), currentPage, rowsPerPage);
+        });
+
+        // Initial fetch
+        fetchItems();
     });
+
 </script>
