--- a/PizzaShop.Core/Views/Home/ResetPassword.cshtml
+++ b/PizzaShop.Core/Views/Home/ResetPassword.cshtml
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <a href="/index.html" class="text-decoration-none">Back to login</a>
+                        <a asp-controller="Home" asp-action="Index" class="text-decoration-none">Back to login</a>
                     </div>
                 </form>
             </div>
