--- a/PizzaShop.Core/Views/Menu/Index.cshtml
+++ b/PizzaShop.Core/Views/Menu/Index.cshtml
@@ -12,40 +12,39 @@
     <div class="formclass  border rounded ">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active">
+                <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
+                    role="tab" aria-controls="home" >
                     <img src="~/images/icons/bars-solid.svg" height="20px" alt="">
-                    Menu
+                    Category
                 </button>
-            </li>
+            </li>   
             <li class="nav-item" role="presentation">
-                <button class="nav-link">
+                <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
+                    role="tab" aria-controls="profile" >
                     <img src="~/images/icons/pen-to-square-solid.svg" height="20px" alt="">
-                    Modifires
+                    Modifiers
                 </button>
             </li>
-
         </ul>
     </div>
     <div class="formclass  border rounded ">
         <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
-                tabindex="0">
+            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                 <div class="nav-home">
-@* ---------------------------partial view of tables and category side bar---------------------------------*@
-                    @Html.Partial("_CategoryPartial",Model)
-@* --------------------------------------------------------------------------------------------------------*@
-
+                    @* CATEGORY PARTIAL VIEW *@
+                    @Html.Partial("_ModifiersPartial",Model)
+                </div>
+            </div>
+            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                <div class="nav-home">
+                    @* MODIFIER PARTIAL VIEW *@
+                    @Html.Partial("_CategoryPartial",Model) 
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
-            ...
-        </div>
     </div>
-
 </div>
 
-</div>
 
 
 
@@ -60,6 +59,11 @@
             if (CategoryAdd) {
                 toastr.success(CategoryAdd, 'success', { timeOut: 3000 });
             }
+            var ModifierGroupAdd = '@TempData["ModifierGroupAdd"]';
+            if (ModifierGroupAdd) {
+                toastr.success(ModifierGroupAdd, 'success', { timeOut: 3000 });
+            }
+
         });
     </script>
-}
+}   
