--- a/PizzaShop.Core/Views/Role/Permission.cshtml
+++ b/PizzaShop.Core/Views/Role/Permission.cshtml
@@ -1,5 +1,6 @@
 @{
     Layout = "~/Views/Shared/_Dashboard.cshtml";
+   
 }
 @model List<PizzaShop.Repository.ModelView.RolePermissionModelView>
 
@@ -18,6 +19,7 @@
         <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="floatingInput" value="@ViewBag.Rolename" disabled>
+
                 <label for="floatingInput">Role</label>
             </div>
         </div>
@@ -72,14 +74,20 @@
                                 </div>
                             </td>
                         </tr>
-                                                }
+                        }
                     </tbody>
                 </table>
             </div>
-            <div class="d-flex gap-2 justify-content-end">
+
+                
+            @if(ViewBag.Save == true) {
+                <div class="d-flex gap-2 justify-content-end">
                 <button class="btn btn-primary" type="submit">Save</button>
                 <a class="btn border-primary text-primary" asp-action="Role" asp-controller="Role">Cancel</a>
             </div>
+            }
+            
+            
         </form>
     </div>
 </div>
