--- a/PizzaShop.Core/Views/Shared/_AddItemModal.cshtml
+++ b/PizzaShop.Core/Views/Shared/_AddItemModal.cshtml
@@ -4,38 +4,40 @@
     data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <form asp-action="AddItem" asp-controller="Menu" method="post" enctype="multipart/form-data">
-                <div class="modal-header border-0">
-                    <h3 class="modal-title fs-5" id="exampleModalLabel">Add Menu Item</h3>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
+            <div class="modal-header border-0">
+                <h3 class="modal-title fs-5" id="exampleModalLabel">Add Menu Item</h3>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form asp-action="AddItem" asp-controller="Menu" method="post" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-8">
                             <div class="row">
                                 <div class="col-6 form-floating mb-3">
-                                    <select class="form-select" asp-for="item.Categoryid" >
+                                    <select class="form-select" asp-for="item.Categoryid">
                                         <option value="">Select Category</option>
-                                        @if(Model.Categories != null) {
-                                            @foreach (var c in Model.Categories)
+                                        @if (Model.Categories != null)
                                         {
-                                            <option value="@c.Categoryid">@c.Categoryname</option>
+                                            @foreach (var c in Model.Categories)
+                                            {
+                                                <option value="@c.Categoryid">@c.Categoryname</option>
+                                            }
                                         }
-                                        }
-                                        
+
                                     </select>
                                     <label>Category</label>
                                     <span asp-validation-for="item.Categoryid" class="text-danger"></span>
                                 </div>
                                 <div class="col-6 form-floating mb-3">
-                                    <input type="text" class="form-control" asp-for="item.Itemname" placeholder="Item name" placeholder="Enter item name" />
+                                    <input type="text" class="form-control" asp-for="item.Itemname"
+                                        placeholder="Item name" placeholder="Enter item name" />
                                     <label>Item Name</label>
                                     <span asp-validation-for="item.Itemname" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-3 form-floating mb-3">
-                                    <select class="form-select" asp-for="item.Itemtype" >
+                                    <select class="form-select" asp-for="item.Itemtype">
                                         <option value="0">Select Type</option>
                                         <option value="1">Veg</option>
                                         <option value="2">Non-veg</option>
@@ -44,19 +46,19 @@
                                     <span asp-validation-for="item.Itemtype" class="text-danger"></span>
                                 </div>
                                 <div class="col-3 form-floating mb-3">
-                                    <input type="number" step="0.01" class="form-control" asp-for="item.Rate" placeholder="₹"
-                                         />
+                                    <input type="number" step="0.01" class="form-control" asp-for="item.Rate"
+                                        placeholder="₹" />
                                     <label>Rate</label>
                                     <span asp-validation-for="item.Rate" class="text-danger"></span>
                                 </div>
                                 <div class="col-3 form-floating mb-3">
-                                    <input type="number" step="0.01" class="form-control" asp-for="item.Quantity" placeholder="quantity"
-                                         />
+                                    <input type="number" step="0.01" class="form-control" asp-for="item.Quantity"
+                                        placeholder="quantity" />
                                     <label>Quantity</label>
                                     <span asp-validation-for="item.Quantity" class="text-danger"></span>
                                 </div>
                                 <div class="col-3 form-floating mb-3">
-                                    <select class="form-select" asp-for="item.Units" >
+                                    <select class="form-select" asp-for="item.Units">
                                         <option value="">Select Unit</option>
                                         <option value="1">Piece</option>
                                         <option value="2">Kg</option>
@@ -68,10 +70,10 @@
                             <div class="row ">
                                 <div
                                     class="col-3 form-check form-switch d-flex justify-content-center align-items-center pb-3">
-                                <div class="m-1">1</div>
-                                    <input class="form-check-input me-2" type="checkbox" name="item.Isavailabe"
+                                    <div class="m-1">1</div>
+                                    <input class="form-check-input me-2" type="checkbox" name="item.Isavailable"
                                         value="true" @(Model?.item?.Isavailabe == true ? "checked" : "") />
-                                    <input type="hidden" name="item.Isavailabe" value="false" />
+                                    <input type="hidden" name="item.Isavailable" value="false" />
                                     <!-- Ensures false is sent if unchecked -->
                                     <label>Available</label>
                                 </div>
@@ -84,20 +86,22 @@
                                     <label>Default Tax</label>
                                 </div>
                                 <div class="col-3 form-floating mb-3">
-                                    <input type="number" step="0.01" class="form-control"
-                                        asp-for="item.Taxpercentage" placeholder="%" />
+                                    <input type="number" step="0.01" class="form-control" asp-for="item.Taxpercentage"
+                                        placeholder="%" />
                                     <label>Tax %</label>
                                     <span asp-validation-for="item.Taxpercentage" class="text-danger"></span>
                                 </div>
                                 <div class="col-3 form-floating mb-3">
-                                    <input type="text" class="form-control" asp-for="item.Shortcode" placeholder="#code"/>
+                                    <input type="text" class="form-control" asp-for="item.Shortcode"
+                                        placeholder="#code" />
                                     <label>Short Code</label>
                                     <span asp-validation-for="item.Shortcode" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-12 form-floating mb-3">
-                                    <textarea class="form-control" asp-for="item.Description" placeholder="enter item's description "></textarea>
+                                    <textarea class="form-control" asp-for="item.Description"
+                                        placeholder="enter item's description "></textarea>
                                     <label>Description</label>
                                     <span asp-validation-for="item.Description" class="text-danger"></span>
                                 </div>
@@ -106,14 +110,15 @@
                                 <label class="mb-1">Upload Image</label>
                                 <div class="col-12 position-relative p-3  mb-1">
                                     <div class="file-upload">
-                                        <input class="col drag-area form-control" asp-for="item.UploadFiles" type="file" id="imageInput" accept="image/*" />
-                                    <div class="d-flex flex-column justify-content-center align-items-center w-100">
-                                        
-                                             <span class="display-4"><i class="bi bi-cloud-arrow-down"></i></span>
-                                        <span>Browse Files</span>
+                                        <input class="col drag-area form-control" asp-for="item.UploadFiles" type="file"
+                                            id="imageInput" accept="image/*" />
+                                        <div class="d-flex flex-column justify-content-center align-items-center w-100">
+
+                                            <span class="display-4"><i class="bi bi-cloud-arrow-down"></i></span>
+                                            <span>Browse Files</span>
+                                        </div>
                                     </div>
-                                    </div>
-                                    
+
                                 </div>
                             </div>
                         </div>
@@ -136,13 +141,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="modal-footer border-0 justify-content-end">
-                    <button type="submit" class="btn btn-primary">Save</button>
-                    <a class="btn border-primary text-primary" data-bs-dismiss="modal">Cancel</a>
-                </div>
-            </form>
+                    <div class="modal-footer border-0 justify-content-end">
+                        <button type="submit" class="btn btn-primary">Save</button>
+                        <a class="btn border-primary text-primary" data-bs-dismiss="modal">Cancel</a>
+                    </div>
+                </form>
+            </div>
+
         </div>
     </div>
 </div>
-
