--- a/PizzaShop.Core/Views/Shared/_ModifiersPartial.cshtml
+++ b/PizzaShop.Core/Views/Shared/_ModifiersPartial.cshtml
@@ -1,177 +1,123 @@
 @model PizzaShop.Repository.ModelView.MenuWithItemsViewModel
-<Aside class=" rightsideborder sideBar border-right-primary rounded p-3">
-    <div class="logoheader">
-        <h4 class="text-primary d-flex justify-content-between align-items-center">
-            Modifiers
-
-            <a type="button" class="text-decoration-none bg-light px-1 border border-2 rounded border-primary"
-                data-bs-toggle="modal" data-bs-target="#exampleModal1" data-bs-whatever="">
-                <img src="~/images/icons/plus-solid.svg" alt="" class="" height="20px">
-            </a>
-
-        </h4>
-
-    </div>
-    <ul>
-        <!-- <li class="d-flex align-items-center gap-2"><img src="./images/images/icons/bowl-food-solid.svg" height="20px"> Sandwich</li> -->
-        <div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist" aria-orientation="vertical">
-            @if (Model.modifiergroups != null)
-            {
-
-
-                @foreach (var modifier in Model.modifiergroups)
+@{
+    bool canEdit = ViewBag.permission[2].Canedit;
+    bool canDelete = ViewBag.permission[2].Candelete;
+}
+<div class="p-2" id="ModifiersContainer" data-total-modifiers="@Model.TotalItems1">
+    @if (Model.Modifiers != null && Model.Modifiers.Any())
+    {
+        <table class="table text-nowrap">
+            <thead>
+                <tr>
+                    <th><input class="form-check-input" type="checkbox" value="" id="selectAllCheckbox"></th>
+                    <th>Name</th>
+                    <th>Unit</th>
+                    <th>Rate</th>
+                    <th>Quantity</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var i in Model.Modifiers)
                 {
-                    <li class="nav-link links Modifier-link d-flex justify-content-between align-items-center gap-2 @(ViewBag.SelectedModifierId == modifier.Modifiergroupid ? "active" : "")"
-                        id="v-pills-@modifier.Modifiergroupid-tab" data-Modifier-id="@modifier.Modifiergroupid">
+                    <tr>
+                        <td><input class="form-check-input item-checkbox" type="checkbox" name="selectedItemIds"
+                                value="@i.Modifierid" data-item-id="@i.Modifierid"></td>
+                        <td>
+                            @i.Modifiername
+                        </td>
+                        <td>
+                            @i.Modifierunit
+                        </td>
+                        <td>@i.Modifierrate</td>
+                        <td>
+                            <div class="mx-3">@i.Modifierquantity</div>
+                        </td>
+                        <td>
+                            @if (canEdit == true)
+                            {
+                                <a data-bs-toggle="modal" data-bs-target="#editModal-Modifier"><i
+                                        class="bi bi-pen mx-1"></i></a>
+                            }
+                            @if (canDelete == true)
+                            {
+                                <a data-bs-toggle="modal" class="delete-modifier-link" data-bs-target="#staticBackdrop1-Modifier" data-modifier-id="@i.Modifierid"
+                                ><i class="bi bi-trash"></i></a>
+                            }
+                        </td>
+                    </tr>
 
-                        <a href="@Url.Action("Index", "Menu", new { ModifierId = modifier.Modifiergroupid })"
-                            class="text-decoration-none @(ViewBag.SelectedModifierId == modifier.Modifiergroupid ? "text-white" : "text-dark")">
-                            <i class="bi bi-grid-3x2-gap-fill me-2"></i>@modifier.Modifiergroupname
-                        </a>
 
-                        <div class="activePens d-none">
-                            <a href="#" data-bs-toggle="modal" class="text-primary"
-                                data-bs-target="#exampleModal1-@modifier.Modifiergroupid-i">
-                                <i class="bi bi-pen mx-1"></i>
-                            </a>
-                            <a href="#" data-bs-toggle="modal" class="text-primary"
-                                data-bs-target="#exampleModal2-@modifier.Modifiergroupid-d">
-                                <i class="bi bi-trash"></i>
-                            </a>
-                        </div>
-                    </li>
-                    //edit modal for categories
-
-                     <div class="modal fade" id="exampleModal1-@modifier.Modifiergroupid-i" tabindex="-1" data-bs-backdrop="static"
-                        data-bs-keyboard="false" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Modifier</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <form method="post" asp-action="EditModifier" asp-controller="Menu">
-                                        <div class="form-floating mb-3">
-                                            <input type="text" class="form-control" id="floatingInput" asp-for="Modifiergroupname"
-                                                placeholder="name" value="@modifier.Modifiergroupname">
-                                            <label for="floatingInput">Modifier group</label>
-                                            <span class="text-danger" asp-validation-for="Modifiergroupname"></span>
-                                        </div>
-                                        <div class="form-floating">
-                                            <input class="form-control text-wrap overflow-auto" asp-for="Modifiergroupdescription"
-                                                placeholder="Leave a comment here" id="floatingTextarea2"
-                                                style="height: 100px; resize: none;" value="@modifier.Modifiergroupdescription">
-                                            <label for="floatingTextarea2">Description</label>
-                                            <span class="text-danger" asp-validation-for="Modifiergroupdescription"></span>
-                                        </div>
-
-                                        <input type="hidden" asp-for="Userid" value="@ViewBag.UserId">
-                                        <input type="hidden" asp-for="Modifiergroupid" value="@modifier.Modifiergroupid">
-
-                                        <div class="modal-footer">
-                                            <button type="submit" class="btn btn-primary">Save</button>
-                                            <button type="button" class="btn border-primary text-primary"
-                                                data-bs-dismiss="modal">Cancel</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div> 
-
-                    //delete modal for categories
-
-                     <div class="modal fade" id="exampleModal2-@modifier.Modifiergroupid-d" tabindex="-1" data-bs-backdrop="static"
-                        data-bs-keyboard="false" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Category</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <form method="post" asp-action="DeleteModifierGroup" asp-controller="Menu">
-                                        <div class="modal-body d-flex flex-column justify-content-center align-items-center ">
-                                            <img src="~/images/toppng.com-warning-icon-2400x2400.png" height="40px"
-                                                width="40px">
-                                            <div class=""> Are you sure you want to delete this category?
-                                            </div>
-                                        </div>
-                                        <input type="hidden" asp-for="Userid" value="@ViewBag.UserId">
-                                        <input type="hidden" asp-for="Modifiergroupid" value="@modifier.Modifiergroupid">
-
-                                        <div class="modal-footer d-flex-col justify-content-center">
-                                            <button type="submit" class="btn btn-primary">Yes</button>
-                                            <button type="button" class="btn border-primary text-primary"
-                                                data-bs-dismiss="modal">No</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div> 
                 }
-            }
-            @* <li class="d-flex justify-content-between gap-2" id="v-pills-salads-tab"
-                                    data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab"
-                                    aria-controls="v-pills-profile" aria-selected="false">
-                                    <div class=""><i class="bi bi-grid-3x2-gap-fill"></i> Salads</div>
-                                    <div class="activePens d-none "><a href=""><i class="bi bi-pen mx-1"></i></a>
-                                        <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal1">
-                                            <i class="bi bi-trash"></i>
-                                        </a>
-                                    </div>
-                                </li> *@
+            </tbody>
+
+        </table>
+
+    }
+    else
+    {
+        <div class=" d-flex align-items-center justify-content-center ">No Modifiers Found</div>
+    }
+</div>
+
+
+
+
+
+
+<!-- Delete Modal (unchanged) -->
+
+<div class="modal fade" id="staticBackdrop1-Modifier" data-bs-backdrop="static" data-bs-keyboard="false"
+    tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">Delete Confirmation</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form method="post" asp-action="DeleteModifier" asp-controller="Menu">
+                <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                    <img src="~/images/toppng.com-warning-icon-2400x2400.png" height="40px" width="40px">
+                    <div class="">Are you sure you want to delete this modifier?</div>
+                </div>
+                <input type="hidden" asp-for="Userid"  value="@ViewBag.Userid" />
+                <input type="hidden" name="modifierid" id="deleteModifierId" value="" />
+                <div class="modal-footer d-flex-col justify-content-center">
+                    <button type="submit" data-id="modiferid" class="btn btn-primary">Yes</button>
+                    <button type="button" class="btn border-primary text-primary" data-bs-dismiss="modal">No</button>
+                </div>
+            </form>
         </div>
-    </ul>
-
-</Aside>
-
-
+    </div>
+</div>
+<!-- Pagination (unchanged) -->
 
 
 
-@* ------------------------------modal for add category----------------------------------- *@
-@Html.Partial("_AddModifierPartial", Model)
-
-@* -------------------------------modal for add items------------------------------------- *@
-@* @Html.Partial("_AddItemModal") *@
 
 
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+@* Script *@
 <script>
     $(document).ready(function () {
-        // Handle search input
-        $('#searchInput').on('keyup', function () {
-            fetchItems($('.category-link.active').data('category-id'), $(this).val());
-        });
+        $(document).on('click', '.delete-modifier-link', function (e) {
+            e.preventDefault(); // Prevent default link behavior
 
-        // Fetch items via AJAX
-        function fetchItems(categoryId = null, searchTerm = '') {
-            $.ajax({
-                url: '@Url.Action("FilterItems", "Menu")',
-                type: 'GET',
-                data: { categoryId: categoryId, searchTerm: searchTerm },
-                success: function (data) {
-                    $('#collapse1').html(data);
-                },
-                error: function () {
-                    alert('Error loading items.');
-                }
-            });
-        }
+            var modifierId = $(this).data('modifier-id'); // Fetch modifier ID
 
+            if (!modifierId || modifierId === "0") {
+                console.error("Invalid Modifier ID:", modifierId);
+                return;
+            }
 
-        $('.category-link').click(function (e) {
-            e.preventDefault();
-            var categoryId = $(this).data('category-id');
-
-            $('.category-link').removeClass('active');
-            $(this).addClass('active');
-
-            fetchItems(categoryId, $('#searchInput').val());
+            console.log("Modifier ID clicked:", modifierId);
+            
+            // Set the hidden input value
+            $('#deleteModifierId').val(modifierId);
+            console.log("Hidden input value after setting:", $('#deleteModifierId').val());
         });
     });
 </script>
+
+
+
